# api-builder

./: .env.example  .gitignore  AGENT_PROMPTS.md  CONTRIBUTING.md  LICENSE  PROJECT_STATUS.md  README.md  TODO.md  interactive_terminal.py  launch_interactive.sh  locations.json  pyproject.toml  pytest.ini  qapi
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: agent-1-testing.md  agent-2-parsers.md  agent-3-errors.md  agent-4-docs.md
.github/workflows/: ci.yaml  (+3 more)
cli/: Day 1 - Project Overview  __init__.py  config.py  context.py  dependency_analyzer.py  main.py  parameter_detector.py  state.py
docs/: ARCHITECTURE.md  CLAUDE_AGENTS_WORKFLOW.md  Day 2 - Project Overview.md  GITHUB_CLAUDE_SETUP.md  Makefile  ROADMAP.md  SPEC-1-API-Builder.md  TROUBLESHOOTING.md  USER_GUIDE.md  api_reference.rst  conf.py  index.rst  nextsteps.md  requirements.txt
examples/: README.md  basic_usage.py  error_handling.py  multi_step_workflow.py
openapi/: example_api.yaml  openai.json
parsers/: __init__.py  base.py  factory.py  insomnia.py  openapi.py  postman.py
qapi/: circuit_breaker.py  exceptions.py  logging.py  recovery.py  retry.py
scripts/: generate_endpoints.py  patch_workspace.py  regen_client.py  watch_openapi.py
tests/: conftest.py  test_auth_integration.py  test_circuit_breaker.py  test_dependency_analyzer.py  test_example.py  test_exceptions.py  test_insomnia_parser.py  test_openapi_parser.py  test_parameter_detector.py  test_parser_factory.py  test_parser_foundation.py  test_postman_parser.py  test_retry.py  test_state.py  test_system_integration.py
(+27 files in other folders)
