[tool.poetry]
name = "api-builder"
version = "0.1.0"
description = "LLM-assisted API client and CLI builder"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
typer = {extras = ["all"], version = "^0.9.0"}

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"
mypy = "^1.8.0"
ruff = "^0.4.0"
watchdog = "^4.0.0"
openapi-python-client = "^0.18.0"
black = "^24.0.0"

[tool.black]
line-length = 88

[tool.flake8]
max-line-length = 88
exclude = .git,__pycache__,.venv,venv,build,dist

[tool.mypy]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api" 