[tool.poetry]
name = "api-builder"
version = "0.1.0"
description = "LLM-assisted API client and CLI builder"
authors = ["Your Name <you@example.com>"]
packages = [{include = "cli"}]

[tool.poetry.dependencies]
python = "^3.11"
typer = {extras = ["all"], version = "^0.9.0"}
requests = "^2.32.4"
pydantic-settings = "^2.10.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
mypy = "^1.8.0"
ruff = ">=0.2,<0.3"
watchdog = "^4.0.0"
openapi-python-client = "^0.18.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"